log
g++ -o HttpdServer HttpdServer.cc -lpthread -std=c++11
In file included from HttpdServer.hpp:10:0,
                 from HttpdServer.cc:1:
ProtocolUtil.hpp: In static member function ‘static void* Entry::HandlerRequest(void*)’:
ProtocolUtil.hpp:658:60: error: request for member ‘rsp_’ in ‘rq_’, which is of pointer type ‘Request*’ (maybe you meant to use ‘->’ ?)
                                     HandlerError(conn_,rq_.rsp_);
                                                            ^
make: *** [HttpdServer] Error 1
